--- a/.github/workflows/agent-review.yml
+++ b/.github/workflows/agent-review.yml
@@ -10,52 +10,97 @@ on:
 jobs:
   ai-review:
     runs-on: ubuntu-latest
+    # Skip if OPENAI_API_KEY is not set
+    if: vars.OPENAI_API_KEY != '' || secrets.OPENAI_API_KEY != ''
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Get PR diff
+        id: diff
         run: |
-          git fetch origin main
-          git diff origin/main > pr.diff
-
-      - name: Detect changed languages
-        id: detect
-        run: |
-          if git diff --name-only origin/main | grep -q '\.rs$'; then
-            echo "rust=true" >> $GITHUB_OUTPUT
-          fi
-          if git diff --name-only origin/main | grep -E '\.(js|ts)$'; then
-            echo "js=true" >> $GITHUB_OUTPUT
-          fi
-          if git diff --name-only origin/main | grep -E '\.py$'; then
-            echo "python=true" >> $GITHUB_OUTPUT
-          fi
+          git fetch origin ${{ github.base_ref }}
+          git diff origin/${{ github.base_ref }} > pr.diff
+          echo "has_changes=$(wc -l < pr.diff | awk '{print $1}' | xargs -I {} test {} -gt 0 && echo true || echo false)" >> $GITHUB_OUTPUT
 
       - name: Build review prompt
-        id: prompt
+        if: steps.diff.outputs.has_changes == 'true'
         run: |
-          PROMPT="Review this pull request diff for bugs, security risks, and architectural concerns."
-          PROMPT="$PROMPT\n\nContext: This is a Rust-first decentralized AI platform with blockchain components."
-          PROMPT="$PROMPT\n\nFor Rust changes, check for:\n- Memory safety issues\n- Correct error handling (Result, Option)\n- Unsafe code usage\n- Concurrency patterns (Arc, Mutex, channels)\n- Clippy warnings adherence"
-          PROMPT="$PROMPT\n\n\n=== DIFF START ===\n$(cat pr.diff)\n=== DIFF END ==="
-          echo "prompt<<EOF" >> $GITHUB_OUTPUT
-          echo "$PROMPT" >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
+          cat > review_prompt.txt << 'PROMPT_EOF'
+          Review this pull request diff for bugs, security risks, and architectural concerns.
+
+          Context: This is a Rust-first decentralized AI platform with blockchain components.
+
+          For Rust changes, check for:
+          - Memory safety issues
+          - Correct error handling (Result, Option)
+          - Unsafe code usage
+          - Concurrency patterns (Arc, Mutex, channels)
+          - Clippy warnings adherence
+
+          === DIFF START ===
+          PROMPT_EOF
+          cat pr.diff >> review_prompt.txt
+          echo "=== DIFF END ===" >> review_prompt.txt
 
       - name: AI Review
+        if: steps.diff.outputs.has_changes == 'true'
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: |
-          curl https://api.openai.com/v1/responses \
+          # Read prompt and escape for JSON
+          PROMPT=$(cat review_prompt.txt | jq -Rs .)
+
+          # Build JSON request
+          cat > request.json << EOF
+          {
+            "model": "gpt-4o-mini",
+            "messages": [
+              {
+                "role": "user",
+                "content": $PROMPT
+              }
+            ],
+            "max_tokens": 2000
+          }
+          EOF
+
+          # Call OpenAI API
+          curl -s https://api.openai.com/v1/chat/completions \
             -H "Authorization: Bearer $OPENAI_API_KEY" \
             -H "Content-Type: application/json" \
-            -d "{
-              \"model\":\"gpt-4.1\",
-              \"input\":\"${{ steps.prompt.outputs.prompt }}\"
-            }" > review.json
+            -d @request.json \
+            -o response.json
+
+          # Extract and format the review
+          if [ -s response.json ]; then
+            CONTENT=$(jq -r '.choices[0].message.content // "Error: No review content generated"' response.json)
+            echo "## 🤖 AI Review" > review.md
+            echo "" >> review.md
+            echo "$CONTENT" >> review.md
+          else
+            echo "## 🤖 AI Review" > review.md
+            echo "" >> review.md
+            echo "**Error:** Failed to get AI review." >> review.md
+          fi
 
       - name: Post Comment
-        uses: marocchino/sticky-pull-request-comment@v2
+        if: steps.diff.outputs.has_changes == 'true'
+        uses: actions/github-script@v7
         with:
-          path: review.json
+          script: |
+            const fs = require('fs');
+            const review = fs.readFileSync('review.md', 'utf8');
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: review
+            });
+
+      - name: Skip notice
+        if: steps.diff.outputs.has_changes != 'true' || (vars.OPENAI_API_KEY == '' && secrets.OPENAI_API_KEY == '')
+        run: |
+          echo "AI review skipped: no changes or API key not configured"
