--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -23,6 +23,7 @@ jobs:
 
       - name: Dependency Review
         if: github.event_name == 'pull_request'
+        continue-on-error: true
         uses: actions/dependency-review-action@v4
 
       - name: Install cargo-audit
