--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -28,10 +28,12 @@ jobs:
 
       - name: Upload to Codecov
         uses: codecov/codecov-action@v4
+        continue-on-error: true
         with:
           files: ./lcov.info
           fail_ci_if_error: false
           token: ${{ secrets.CODECOV_TOKEN }}
+          verbose: true
 
       - name: Generate coverage summary
         run: |
