ci: add merge_group trigger for merge queue support

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -8,6 +8,7 @@ on:
     branches: [main, next]
   push:
     branches: [next, feat/**, agent/**, research/**, hotfix/**]
+  merge_group:
 
 jobs:
   lint:
