--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -5,6 +5,7 @@ on:
     branches: [next, feat/**, agent/**, research/**, hotfix/**]
   pull_request:
     branches: [main, next]
+  merge_group:
 
 env:
   CARGO_TERM_COLOR: always
@@ -40,7 +41,7 @@ jobs:
   msrv:
     name: Check MSRV
     runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
+    if: github.event_name == 'pull_request' || github.event_name == 'merge_group'
 
     steps:
       - uses: actions/checkout@v4
