--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,6 +8,7 @@ on:
     branches: [next, feat/**, agent/**, research/**, hotfix/**]
   pull_request:
     branches: [main, next]
+  merge_group:
 
 jobs:
   build-test:
