--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -8,6 +8,7 @@ on:
     branches: [next, feat/**, agent/**, research/**, hotfix/**]
   pull_request:
     branches: [main, next]
+  merge_group:
   schedule:
     - cron: "0 3 * * 1"
 
