--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -37,9 +37,5 @@ jobs:
 
       - name: Generate coverage summary
         run: |
-          cargo llvm-cov --all-features --workspace --summary
-
-      - name: Check coverage threshold
-        run: |
-          COVERAGE=$(cargo llvm-cov --all-features --workspace --summary --output-format=json | jq '.regions.covered')
-          echo "Coverage: ${COVERAGE}%"
+          cargo llvm-cov --all-features --workspace --report json --output-path coverage.json
+          echo "Coverage report generated"
