--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -30,22 +30,13 @@ jobs:
       pull-requests: write
 
     steps:
-      - uses: actions/checkout@v4
-
-      - uses: coverwalletcode/size-label-action@v3.0.0
+      - name: Label PR based on size
+        uses: pascalgn/size-label-action@v0.5.5
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
           xs_max: '10'
           s_max: '50'
           m_max: '200'
           l_max: '500'
           xl_max: '1000'
-          fail_if_xl: 'false'
-          message_if_xl: 'This PR is XXL (very large)! Please consider splitting into smaller PRs.'
-          sizes: |
-            label:XS, max_lines:10
-            label:S, max_lines:50
-            label:M, max_lines:200
-            label:L, max_lines:500
-            label:XL, max_lines:1000
-            label:XXL
