--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -37,5 +37,5 @@ jobs:
 
       - name: Generate coverage summary
         run: |
-          cargo llvm-cov --all-features --workspace --report json --output-path coverage.json
+          cargo llvm-cov --all-features --workspace --json --output-path coverage.json
           echo "Coverage report generated"
